--- a/views/new/info.phtml
+++ b/views/new/info.phtml
@@ -74,7 +74,7 @@ else
     <?= $step->showMessages() ?>
 
     <div class="form__navbar">
-        <a class="btn btn-light btn-prev btn-lg" href="<?= $installer->makeUrl('new:assembly') ?>"><?= $t('Back') ?></a>
+        <a class="btn btn-light btn-prev btn-lg" href="<?= $installer->makeUrl('new:design') ?>"><?= $t('Back') ?></a>
         <button type="submit" class="btn btn-default btn-next btn-lg" data-action="info"><?= $t('Next') ?></button>
     </div>
 </form>
