--- a/views/setup.phtml
+++ b/views/setup.phtml
@@ -85,6 +85,7 @@ $itemDefault = 'menu__item menu__item';
                     <li class="<?= $steps->getStepState('new:dbcharset', $itemActive, $itemPassed, $itemDefault) ?>"><?= $t('Charset selection') ?></li>
                     <li class="<?= $steps->getStepState('new:checkout', $itemActive, $itemPassed, $itemDefault) ?>"><?= $t('Checkout') ?></li>
                     <li class="<?= $steps->getStepState('new:assembly', $itemActive, $itemPassed, $itemDefault) ?>"><?= $t('Assembly') ?></li>
+                    <li class="<?= $steps->getStepState('new:design', $itemActive, $itemPassed, $itemDefault) ?>"><?= $t('Design') ?></li>
                     <li class="<?= $steps->getStepState('new:info', $itemActive, $itemPassed, $itemDefault) ?>"><?= $t('Information') ?></li>
                     <li class="<?= $steps->getStepState('new:account', $itemActive, $itemPassed, $itemDefault) ?>"><?= $t('Create an account') ?></li>
                     <li class="<?= $steps->getStepState('new:finish', $itemActive, $itemPassed, $itemDefault) ?>"><?= $t('Finish') ?></li>
